fix text size on mobile

--- a/Server/public/css/style.css
+++ b/Server/public/css/style.css
@@ -7,11 +7,11 @@ body {
 
 h1 {
 	font-family: "Pacifico";
-	font-size: 72px;
+	font-size: 65px;
 }
 
 h2 {
-	font-size: 54px;
+	font-size: 50px;
 }
 
 button {
